* Removed vulkan renderer for now (don't have scope or ability to maintain both renderers, and I have plans to write a GL3 renderer)
* Fixed zombie animations
* Ported particle engine to 32-bit colour
* You don't have to press tab to hide the leaderboard anymore, it just hides itself when you stop holding tab
* Leaderboard now updates in real time

Version 0.04-pre2
December 31, 2023
* Reduced Bamfuslicator range from 1024 to 768 units
* z_tdm_labrats improvements - use actual cylindrical pillars, add more lights and decoration
* Make directors 25% slower than Players
* Added a new leaderboard!
* Fixed being able to move around while team UI is active. This caused teamkilling.
* Fixed the Zombie textures
* Targa images now have a missing texture targa loaded in their place when they fail to load
* TDM gameplay flow - both teams can win/lose/draw
* Zombies no longer target directors unless GF_ITEM_FRIENDLY_FIRE is enabled
* Changed many more icons
* Unified drawstring functions
* Increased maximum controls per UI from 32 to 256. They aren't dynamically allocated yet, sorry for 2 megabytes of your ram.
* Did some more work on z_tdm_ussr, but nowhere near complete
* Increase number of messages before the chat scrolls from 4 to 9
* Fixed lighting on second floor of z_tdm_labrats

Version 0.04-pre1
December 23, 2023
* Rewrote everything using vkquake2 as a base
* Labrats remodel
* Basicallty the same feature set as test3, but it works

Version 0.03.1
September 28, 2023
* Fixed the fact it doesn't fucking work

Version 0.03
September 24, 2023
* Added new map: Labrats!
* Removed MFC dependency
* New app icon
* Large code cleanup, removed a lot of defines
* Made code that should be #ifdef _WIN32 #ifdef _WIN32
* Removed a bunch of empty functions
* Changed window title to Zombono from FitzQuake
* Changed window classname to Zombono from FitzQuake
* Zombies cannot spawn in walls anymore
* Refactoring: Moved function definitions from quakedef.h into host.h/chase.h